# solguard-ai

./: .gitignore  .mocharc.yml  ARCHITECTURE.md  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_INSTRUCTIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TEST_SUMMARY.md  deploy_devnet.sh
.github/: FUNDING.yml
app/: ai_detector.py  economic_oracle.py
docs/: WHITEPAPER.md
programs/governance-module/: Cargo.toml
programs/governance-module/src/: lib.rs
programs/security-oracle/: Cargo.toml
programs/security-oracle/src/: lib.rs  privacy_protocol.rs  quantum_resistant.rs
programs/solguard-token/: Cargo.toml
programs/solguard-token/src/: lib.rs
programs/transparency-vault/: Cargo.toml
programs/transparency-vault/src/: lib.rs
programs/validator-registry/: Cargo.toml
programs/validator-registry/src/: lib.rs
tests/: governance.ts  security_oracle.ts  test_ai_detector.py  test_economic_oracle.py  transparency_vault.ts  validator_registry.ts
