[workspace]
members = [
    "programs/security-oracle",
    "programs/validator-registry",
    "programs/transparency-vault",
    "programs/governance-module",
    "programs/solguard-token"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
