[package]
name = "governance-module"
version = "0.1.0"
description = "Decentralized governance for SolGuard AI protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance_module"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
