[package]
name = "transparency-vault"
version = "0.1.0"
description = "On-chain transparency and verification registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transparency_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
