[package]
name = "validator-registry"
version = "0.1.0"
description = "Validator health monitoring and incentive system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "validator_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
